[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menus/Arcade/Arcade_Game_over.gd" type="Script" id=1]
[ext_resource path="res://misc/line-text-big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Arcade/VBox_Arcade_Player_End.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/Arcade/Arcade_Bottom_HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/BackGroundSpace-01.png" type="Texture" id=5]

[node name="Arcade_Game_over" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 763.0
margin_right = 1148.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 9
size_flags_stretch_ratio = 0.25
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 385.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Robits"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 632.0
margin_top = 129.0
margin_right = 1280.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 9
size_flags_stretch_ratio = 0.25
_sections_unfolded = [ "Size Flags" ]

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 648.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 258.0
margin_right = 1912.0
margin_bottom = 923.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="_6" type="MarginContainer" parent="VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 117.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
_sections_unfolded = [ "Size Flags" ]

[node name="VBox_Arcade_Player_End4" parent="VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 3 )]

margin_left = 121.0
margin_right = 355.0
margin_bottom = 665.0
player_num = 4

[node name="_4" type="MarginContainer" parent="VBoxContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 359.0
margin_right = 476.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5

[node name="VBox_Arcade_Player_End3" parent="VBoxContainer/HBoxContainer" index="3" instance=ExtResource( 3 )]

margin_left = 480.0
margin_right = 714.0
margin_bottom = 665.0
player_num = 3

[node name="_3" type="MarginContainer" parent="VBoxContainer/HBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 718.0
margin_right = 835.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
_sections_unfolded = [ "Size Flags" ]

[node name="VBox_Arcade_Player_End1" parent="VBoxContainer/HBoxContainer" index="5" instance=ExtResource( 3 )]

margin_bottom = 665.0

[node name="_1" type="MarginContainer" parent="VBoxContainer/HBoxContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1077.0
margin_right = 1194.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
_sections_unfolded = [ "Size Flags" ]

[node name="VBox_Arcade_Player_End2" parent="VBoxContainer/HBoxContainer" index="7" instance=ExtResource( 3 )]

margin_left = 1198.0
margin_right = 1432.0
margin_bottom = 665.0
player_num = 2

[node name="_2" type="MarginContainer" parent="VBoxContainer/HBoxContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1436.0
margin_right = 1553.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
_sections_unfolded = [ "Size Flags" ]

[node name="VBox_Arcade_Player_End5" parent="VBoxContainer/HBoxContainer" index="9" instance=ExtResource( 3 )]

margin_left = 1557.0
margin_right = 1791.0
margin_bottom = 665.0
player_num = 5

[node name="_5" type="MarginContainer" parent="VBoxContainer/HBoxContainer" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1795.0
margin_right = 1912.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 927.0
margin_right = 1912.0
margin_bottom = 993.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
_sections_unfolded = [ "Size Flags" ]

[node name="Arcade_Bottom_HUD" parent="VBoxContainer" index="4" instance=ExtResource( 4 )]

margin_top = 997.0
margin_bottom = 1079.0

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 965.943, 540.514 )
scale = Vector2( 3.76456, 2.11829 )
z_index = -1
texture = ExtResource( 5 )
_sections_unfolded = [ "Z Index" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 15.0
one_shot = false
autostart = true


